# pythond

./: .gitignore  EXAMPLES.md  README.md  SKILL.md  agent_tty.py  pyproject.toml  pythond.py  test_pythond.py
.agent/contracts/archived/: remove-dead-t-send.md
.agent/evidence/: audit-agent-tty-2026-06-21.md  remove-dead-t-send-2026-06-21.md
.agent/precedents/: INDEX.yaml  audit-pin-to-commit.yaml
.github/workflows/: ci.yml
archive/t/: monitor.sh  t.sh
archive/t/references/: bash.md  node.md  principles.md  python.md  r.md  ssh.md  watching.md
docs/: CNAME  index.html
man/: agent-tty.1
references/: cloakbrowser.md
src/agent_tty/: __init__.py  _shared.py  cli.py  monitor.py
tests/: run_all.py  test.sh  test_bridge_contracts.py  test_contracts.py  test_docs.py  test_tcp_windows.py
