[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-tty"
version = "0.1.1"
description = "Persistent TTY for AI agents, shared live terminal for humans"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["agent", "terminal", "tmux", "repl", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Shells",
]

[project.urls]
Homepage = "https://github.com/rangersui/agent-tty"
Repository = "https://github.com/rangersui/agent-tty"

[project.scripts]
agent-tty = "agent_tty.cli:main"
k = "agent_tty.cli:main"
km = "agent_tty.monitor:main"

[tool.hatch.build.targets.wheel.shared-data]
"man/agent-tty.1" = "share/man/man1/agent-tty.1"
