[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pythond"
version = "0.3.0"
description = "sshd gives you a shell. pythond gives you Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["daemon", "repl", "python", "shell", "ai", "agent", "pty", "persistent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Shells",
]
dependencies = [
    "websockets>=12",
    "wsproto>=1.3",
    "cryptography>=42",
    "pywinpty; sys_platform == 'win32'",
]

[project.scripts]
pythond = "pythond:main"
pysh = "pythond:pysh_main"
pyctl = "pythond:pyctl_main"

[project.urls]
Homepage = "https://pythond.sh"
Repository = "https://github.com/rangersui/pythond"
